fix card title flex-wrap

--- a/assets/sass/molecules/_card.scss
+++ b/assets/sass/molecules/_card.scss
@@ -214,9 +214,12 @@ a.card-img-top {
 
 .card-justify {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
   align-items: baseline;
+
+  .card-title {
+    margin-right: $grid-gutter-width / 2;
+  }
 }
 
 /**
